--- a/src/app/speech/components/view-all/view-all.component.css
+++ b/src/app/speech/components/view-all/view-all.component.css
@@ -26,7 +26,7 @@
   .vertical-scroll {
     overflow-y:scroll;
   }
-  .mh-70 {
-      max-height: 70vh;
+  .mh-80 {
+      max-height: 80vh;
   }
 
